first comments pavel
tomorrow morning next half

--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -82,17 +82,17 @@ After syntax (actually, each instance of merge), the syntactic structure is matc
   \label{fig:nano}
 \end{figure}
 
-In Nanosyntax, the lexicon is nothing but links between syntactic representations, phonological representations and conceptual representations \citep{starke2014}.\footnote{
+In Nanosyntax, the lexicon contains nothing but links between syntactic representations, phonological representations and conceptual representations \citep{starke2014}.\footnote{
 The syntactic representation does not have to correspond to both a phonological and a conceptual representation. Syntactic representation that only correspond to a conceptual representations and not to phonological representations are (phrasal or clausal) idioms. Syntactic representations that only correspond to phonological representations but not to conceptual representations are for instance irregular plurals.
-}
-I leave the conceptual representation out of discussion for now, as it not relevant for the discussion here. The fact that only syntax can create complex feature structures also has a consequence for the content of the lexicon.
-Syntactic structures are constrained by certain principles, such that only well-formed syntactic structures exist. Since the lexical items from the lexicon link syntactic representation to phonological and conceptual representation, these syntactic representations are constrained by the same principles as syntactic trees are. As a result, the lexicon only contains well-formed syntactic structures. The lexicon does not contain unstructured `feature bundles', because they could never be created by syntax.
+} I leave the conceptual representation out of discussion for now, as it not relevant for the discussion here. The fact that only syntax can create complex feature structures also has a consequence for the content of the lexicon.
+Throughout the dissertation I call the syntactic representations in the lexicon `lexical trees' in order to distinguish them from syntactic structures in the syntax.
+Syntactic structures are constrained by certain principles, such that only well-formed syntactic structures exist. Since lexical entires in the lexicon link lexical trees to phonological and conceptual representation, these lexical trees are constrained by the same principles as syntactic structures are. As a result, the lexicon only contains well-formed lexical trees. The lexicon does not contain unstructured `feature bundles', because they could never be created by syntax.
 
 Following this logic, the syntactic representation for a lexical entry as in \ref{ex:feature-set} cannot exist. The feature bundle cannot have entered syntax, because syntax starts with atomic features. It can also not be created by syntax, because complex structures can only be created with merge.
 
 \ex. [ \tsc{f}1, \tsc{f}2, \tsc{f}3 ]\label{ex:feature-set}
 
-Instead, a possible syntactic representation for a lexical entry looks as in \ref{ex:feature-structure}. The features are merged one by one in a binary syntactic structure.
+Instead, a possible lexical tree looks as in \ref{ex:feature-structure}. The features are merged one by one in a binary structure.
 
 \ex. \begin{forest} boom
   [\ac{dat}P
@@ -108,7 +108,7 @@ This structure leads to the concept of phrasal spellout: not terminals but multi
 
 Let me illustrate all of the above with the Faroese pronouns from Table \ref{tbl:syncretisms-derive}. I simplify the situation in two respects. First, I do not show the internal complexity of the pronouns, including person and number features. Instead, I give a triangle, indicating that this is a complex syntactic structure. I refer to is as the person-number phase it refers to, so e.g. \tsc{3sg}P. Second, in this simplified representation I consider the Faroese pronouns to be monomorphemic. I ignore the fact that all three pronouns clearly have the stem \tit{t} with a suffix on it.
 
-The lexical entry for \tit{tú} is given in \ref{ex:faroese-tu-lexicon}. The syntactic representation consists of the complex syntactic structure that corresponds to the third person singular pronoun (the \tsc{3sg}P), and \tsc{f}1, making it a \tsc{nom}P. The phonological representation that is linked to the syntactic representation in \tit{tú}. Throughout the dissertation, I use syntactic structures and phonological forms connected by a double arrow (⇔) to refer to a lexical entry.
+The lexical entry for \tit{tú} is given in \ref{ex:faroese-tu-lexicon}. The syntactic representation consists of the complex lexical tree that corresponds to the third person singular pronoun (the \tsc{3sg}P), and \tsc{f}1, making it a \tsc{nom}P. The phonological representation that is linked to the lexical tree is \tit{tú}. Throughout the dissertation, I use lexical trees and phonological forms connected by a double arrow (⇔) to refer to a lexical entry.
 
 \ex.
 \begin{forest} boom
@@ -122,7 +122,7 @@ The lexical entry for \tit{tú} is given in \ref{ex:faroese-tu-lexicon}. The syn
 \end{forest}
 \label{ex:faroese-tu-lexicon}
 
-The lexical entry for \tit{teg} is given in \ref{ex:faroese-teg-lexicon}. The syntactic representation contains all the features of the syntactic structure in \ref{ex:faroese-tu-lexicon}, plus \tsc{f}2, making it an \tsc{acc}P. The linked phonological representation is \tit{teg}.
+The lexical entry for \tit{teg} is given in \ref{ex:faroese-teg-lexicon}. The syntactic representation contains all the features of the lexical tree in \ref{ex:faroese-tu-lexicon}, plus \tsc{f}2, making it an \tsc{acc}P. The linked phonological representation is \tit{teg}.
 
 \ex.
 \begin{forest} boom
@@ -139,7 +139,7 @@ The lexical entry for \tit{teg} is given in \ref{ex:faroese-teg-lexicon}. The sy
 \end{forest}
 \label{ex:faroese-teg-lexicon}
 
-The lexical entry for \tit{tær} is given in \ref{ex:faroese-taer-lexicon}. The syntactic representation contains all the features of the syntactic structure in \ref{ex:faroese-teg-lexicon}, plus \tsc{f}3, making it an \tsc{dat}P. The linked phonological representation is \tit{tær}.
+The lexical entry for \tit{tær} is given in \ref{ex:faroese-taer-lexicon}. The syntactic representation contains all the features of the lexical tree in \ref{ex:faroese-teg-lexicon}, plus \tsc{f}3, making it an \tsc{dat}P. The linked phonological representation is \tit{tær}.
 
 \ex.
 \begin{forest} boom
@@ -159,9 +159,10 @@ The lexical entry for \tit{tær} is given in \ref{ex:faroese-taer-lexicon}. The 
 \end{forest}
 \label{ex:faroese-taer-lexicon}
 
-This brings me to the part of the discussion about matching. The syntactic structures and their phonological counterparts I gave in \ref{ex:faroese-tu-lexicon} to \ref{ex:faroese-taer-lexicon} are lexical entries. These are matched against the actual syntactic structure that is to be realized.
+This brings me to the part of the discussion about matching. The lexical trees and their phonological counterparts I gave in \ref{ex:faroese-tu-lexicon} to \ref{ex:faroese-taer-lexicon} are lexical entries. These are matched against the actual syntactic structure that is to be realized.
 Examples of syntactic structures are given in \ref{ex:faroese-tu-spellout} to \ref{ex:faroese-taer-spellout}.
-The syntactic structure in \ref{ex:faroese-tu-spellout} matches the syntactic structure of the lexical entry in \ref{ex:faroese-tu-lexicon}. Therefore, this syntactic structure is spelled out as \tit{tu}. Throughout this dissertation I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it.
+
+The lexical tree in \ref{ex:faroese-tu-lexicon} matches the syntactic structure in \ref{ex:faroese-tu-spellout}. Therefore, this syntactic structure is spelled out as \tit{tu}. Throughout this dissertation I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it.
 
 \ex. \begin{forest} boom
 [\tsc{nomP},
@@ -179,7 +180,7 @@ fit to=tree]{};
 \end{forest}
 \label{ex:faroese-tu-spellout}
 
-\ref{ex:faroese-teg-spellout} matches the syntactic structure of the lexical entry in \ref{ex:faroese-teg-lexicon}, and it is spelled out as \tit{teg}.
+The lexical tree in \ref{ex:faroese-teg-lexicon} matches the syntactic structure in \ref{ex:faroese-teg-spellout}, and it is spelled out as \tit{teg}.
 
 \ex. \begin{forest} boom
 [\tsc{accP},
@@ -200,7 +201,7 @@ fit to=tree]{};
 \end{forest}
 \label{ex:faroese-teg-spellout}
 
-\ref{ex:faroese-taer-spellout} matches the syntactic structure of the lexical entry in \ref{ex:faroese-taer-lexicon}, and it is spelled out as \tit{tær}.
+The lexical tree in \ref{ex:faroese-taer-lexicon} matches the syntactic structure in \ref{ex:faroese-taer-spellout}, and it is spelled out as \tit{tær}.
 
 \ex. \begin{forest} boom
 [\tsc{datP},
@@ -224,15 +225,15 @@ fit to=tree]{};
 \end{forest}
 \label{ex:faroese-taer-spellout}
 
-In the Faroese examples above, the syntactic structure in the syntax always exactly matched the syntactic structure of the lexical entry. However, to be a successful match, identity is not a necessary requirement. Instead, matching relies on a containment relation. A lexical entry applies when it contains all features. This is formalized as in \ref{ex:superset-principle}.
+In the Faroese examples above, the syntactic structure are all identical to the lexical trees. However, to be a successful match, identity is not a necessary requirement. Instead, matching relies on a containment relation. A lexical entry applies when it contains all features. This is formalized as in \ref{ex:superset-principle}.
 
 \ex. \tbf{The Superset Principle} \citet{starke2009}:\\
 A lexically stored tree matches a syntactic node iff the lexically stored tree contains the syntactic node.
 \label{ex:superset-principle}
 
 Let me illustrate this with the Dutch second person plural pronoun from Table \ref{tbl:syncretisms-derive}. This pronoun is syncretic between between the nominative, accusative and dative.
-The lexicon only contains a single lexical entry, namely \ref{ex:dutch-jullie-lexicon}. The syntactic representation consists of the complex syntactic structure that corresponds to the second person plural pronoun (the \tsc{2pl}P), and \tsc{f}1, \tsc{f2} and \tsc{f3} making it a \tsc{dat}P. The phonological representation that is linked to the syntactic representation in \tit{jullie}.
-The nominative, the accusative and the dative can all be spelled out with this lexical entry.
+The lexicon only contains a single lexical entry, namely \ref{ex:dutch-jullie-lexicon}. The syntactic representation consists of the complex lexical tree that corresponds to the second person plural pronoun (the \tsc{2pl}P), and \tsc{f}1, \tsc{f2} and \tsc{f3} making it a \tsc{dat}P. The phonological representation that is linked to the lexical tree is \tit{jullie}.
+The nominative, the accusative and the dative can all be spelled out with this single lexical entry.
 
 \ex.
 \begin{forest} boom
@@ -252,7 +253,7 @@ The nominative, the accusative and the dative can all be spelled out with this l
 \end{forest}
 \label{ex:dutch-jullie-lexicon}
 
-The syntactic structure of the dative, given in \ref{ex:dutch-jullie-spellout-dat}, is the least exciting of the three. It is an exact match to the syntactic structure in the lexical entry \ref{ex:dutch-jullie-lexicon}, and therefore, spelled out as \tit{jullie}.
+The syntactic structure of the dative, given in \ref{ex:dutch-jullie-spellout-dat}, is the least exciting of the three. It is identical to the lexical tree \ref{ex:dutch-jullie-lexicon}, and therefore, spelled out as \tit{jullie}.
 
 \ex. \begin{forest} boom
 [\tsc{datP},
@@ -291,7 +292,7 @@ The syntactic structure of the accusative is given in \ref{ex:dutch-jullie-spell
 \end{forest}
 \label{ex:dutch-jullie-spellout-acc-empty}
 
-This syntactic structure does not exactly match the syntactic structure in the lexical entry in \ref{ex:dutch-jullie-lexicon}. However, the syntactic structure in the lexical entry contains the syntactic structure of the accusative.
+This lexical entry in \ref{ex:dutch-jullie-lexicon} is not identical to the syntactic structure. However, the lexical tree contains the syntactic structure of the accusative.
 I repeat the lexical entry for \tit{jullie} in \ref{ex:dutch-jullie-lexicon-acc}, marking the subpart of the tree that matches the syntactic structure in gray.
 
 \ex. \begin{forest} boom
@@ -357,7 +358,7 @@ fit to=tree]{};
 \end{forest}
  \label{ex:dutch-jullie-spellout-nom-empty}
 
-This syntactic structure does not exactly match the syntactic structure in the lexical entry in \ref{ex:dutch-jullie-lexicon}. However, again, the syntactic structure in the lexical entry contains the syntactic structure of the nominative.
+This lexical tree in \ref{ex:dutch-jullie-lexicon} is not identical to the syntactic structure. However, again, the lexical tree contains the syntactic structure of the nominative.
 I repeated the lexical entry for \tit{jullie} in \ref{ex:dutch-jullie-lexicon-nom}, marking the subpart of the tree that matches the syntactic structure in gray.
 
  \ex. \begin{forest} boom
@@ -402,8 +403,8 @@ fit to=tree]{};
 \end{forest}
  \label{ex:dutch-jullie-spellout-nom}
 
-A question arises at this point. Why are the accusative and nominative in Faroese not spelled out by the lexical entry for the dative (and why is the nominative not spelled out by the lexical entry for the accusative)? These syntactic structures are namely contained in the lexical entry for the dative (and the accusative).
-The reason for that comes from how competition between lexical entries is regulated in Nanosyntax. When two lexical entries compete, the best fit wins. The best fit is the lexical entry with the least unused features. This is formalized as in \ref{ex:elsewhere-condition}.
+A question arises at this point. Why are the accusative and nominative in Faroese not spelled out by the lexical entry for the dative (and why is the nominative not spelled out by the lexical entry for the accusative)? These syntactic structures are namely contained in the lexical tree for the dative (and the accusative).
+The reason for that comes from how competition between lexical entries is regulated in Nanosyntax. When two lexical entries compete, the best fit wins. The best fit is the lexical tree with the least unused features. This is formalized as in \ref{ex:elsewhere-condition}.
 
 \ex. \tbf{The Elsewhere Condition} (\citealt{kiparsky1973}, formulated as in \citealt{caha2020}):\\
 When two entries can spell out a given node, the more specific entry wins. Under the Superset Principle governed insertion, the more specific entry is the one which has fewer unused features.
@@ -411,15 +412,15 @@ When two entries can spell out a given node, the more specific entry wins. Under
 
 I show how the Superset Principle and the Elswhere Condition interact in a competition with the Faroese lexical entries.
 Consider first again the syntactic structure for the nominative in \ref{ex:faroese-tu-spellout}.
-All the Faroese lexical entries \ref{ex:faroese-tu-lexicon}, \ref{ex:faroese-teg-lexicon} and \ref{ex:faroese-taer-lexicon} contain the syntactic structure for it.
+All the Faroese lexical entries \ref{ex:faroese-tu-lexicon}, \ref{ex:faroese-teg-lexicon} and \ref{ex:faroese-taer-lexicon} are a candidate for this syntactic structure.
 \ref{ex:faroese-taer-lexicon} has two unused features: \tsc{f2} and \tsc{f3}. \ref{ex:faroese-teg-lexicon} has one unused feature: \tsc{f2}. \ref{ex:faroese-tu-lexicon} has the least amount of unused features (namely zero), so it wins the competition over the other two.
 
-Regarding the syntactic structure for the accusative in \ref{ex:faroese-teg-spellout}, the lexical entries \ref{ex:faroese-teg-lexicon} and \ref{ex:faroese-taer-lexicon} contain the syntactic structure.
-\ref{ex:faroese-tu-lexicon} is not a candidate here, because it does not contain the syntactic structure (i.e. it lacks \tsc{f2}). \ref{ex:faroese-taer-lexicon} has fewer unused features than \ref{ex:faroese-teg-spellout}, so it wins.
+Regarding the syntactic structure for the accusative in \ref{ex:faroese-teg-spellout}, the lexical entries \ref{ex:faroese-teg-lexicon} and \ref{ex:faroese-taer-lexicon} are a match.
+\ref{ex:faroese-tu-lexicon} is not a candidate here, because it does not contain the complete syntactic structure (i.e. it lacks \tsc{f2}). \ref{ex:faroese-taer-lexicon} has fewer unused features than \ref{ex:faroese-teg-spellout}, so it wins.
 
 Table \ref{tbl:syncretisms-derive} contains two more attested patterns: the ABB in Icelandic and the AAB in German. In the remainder of this section I show how these two patterns are derived. I also how the system is unable to derive an ABA, which is crosslinguistically unattested.
 
-Consider the Icelanic pattern. For the first person plural, Icelandic uses \tit{við} as nominative and \tit{okkur} as accusative and dative. Two lexical entries are needed for that. The first one in \ref{ex:icelandic-vid-lexicon} contain pronominal syntactic structure and \tsc{f}1, and corresponds to the phonology \tit{við}.
+Consider the Icelanic pattern. For the first person plural, Icelandic uses \tit{við} as nominative and \tit{okkur} as accusative and dative. Two lexical entries are needed for that. The first one in \ref{ex:icelandic-vid-lexicon} contains pronominal features and \tsc{f}1, and corresponds to the phonology \tit{við}.
 The second one is given in \ref{ex:icelandic-okkur-lexicon}. It contains in addition to \ref{ex:icelandic-vid-lexicon} also the feature \tsc{f}2 and \tsc{f}3. The phonological representation that is linked to it is \tit{okkur}.
 
 \ex.
@@ -452,7 +453,7 @@ The second one is given in \ref{ex:icelandic-okkur-lexicon}. It contains in addi
 \end{forest}
 \label{ex:icelandic-okkur-lexicon}
 
-The syntactic structure for the dative is given in \ref{ex:icelandic-okkur-spellout-dat}. It is contained in the syntactic structure of the lexical entry \ref{ex:icelandic-okkur-lexicon}, and therefore, spelled out as \tit{okkur}.
+The syntactic structure for the dative is given in \ref{ex:icelandic-okkur-spellout-dat}. It is contained in the lexical tree in \ref{ex:icelandic-okkur-lexicon}, and therefore, spelled out as \tit{okkur}.
 The lexical entry in \ref{ex:icelandic-vid-lexicon} is not considered, because it does not contain \tsc{f2} and \tsc{f3}.
 
 \ex. \begin{forest} boom
@@ -477,7 +478,7 @@ fit to=tree]{};
 \end{forest}
 \label{ex:icelandic-okkur-spellout-dat}
 
-The syntactic structure for the accusative is given in \ref{ex:icelandic-okkur-spellout-acc}. It is contained in the syntactic structure of the lexical entry \ref{ex:icelandic-okkur-lexicon}, and therefore, spelled out as \tit{okkur}.
+The syntactic structure for the accusative is given in \ref{ex:icelandic-okkur-spellout-acc}. It is contained in the lexical tree in \ref{ex:icelandic-okkur-lexicon}, and therefore, spelled out as \tit{okkur}.
 The lexical entry in \ref{ex:icelandic-vid-lexicon} is not considered, because it does not contain \tsc{f2}.
 
 \ex. \begin{forest} boom
@@ -499,7 +500,7 @@ fit to=tree]{};
 \end{forest}
 \label{ex:icelandic-okkur-spellout-acc}
 
-The syntactic structure for the nominative is given in \ref{ex:icelandic-vid-spellout}. It is is contained in the syntactic structure of the lexical entry \ref{ex:icelandic-vid-lexicon} and in \ref{ex:icelandic-okkur-lexicon}.
+The syntactic structure for the nominative is given in \ref{ex:icelandic-vid-spellout}. It is is contained in the lexical tree in \ref{ex:icelandic-vid-lexicon} and in the one in \ref{ex:icelandic-okkur-lexicon}.
 The former, \ref{ex:icelandic-vid-lexicon}, has no unused features. The latter, \ref{ex:icelandic-okkur-lexicon}, has two unused features: \tsc{f}2 and \tsc{f}3.
 Therefore, \ref{ex:icelandic-okkur-lexicon} wins the competition, and the syntactic structure is spelled out as \tit{við}.
 
@@ -520,7 +521,7 @@ fit to=tree]{};
 \label{ex:icelandic-vid-spellout}
 
 For the third person singular feminine, German uses \tit{sie} as nominative and accusative, and \tit{ihr} as dative. Two lexical entries are needed for that.
-The first one in \ref{ex:german-sie-lexicon} contains pronominal syntactic structure, \tsc{f}1 and \tsc{f}2. It corresponds to the phonology \tit{sie}.
+The first one in \ref{ex:german-sie-lexicon} contains pronominal features, \tsc{f}1 and \tsc{f}2. It corresponds to the phonology \tit{sie}.
 The second one is given in \ref{ex:german-ihr-lexicon}. It contains in addition to \tit{sie} in \ref{ex:german-sie-lexicon} also the feature \tsc{f}3. It corresponds to the phonology \tit{ihr}.
 
 \ex.
@@ -556,7 +557,7 @@ The second one is given in \ref{ex:german-ihr-lexicon}. It contains in addition 
 \end{forest}
 \label{ex:german-ihr-lexicon}
 
-The syntactic structure for the dative is given in \ref{ex:german-ihr-spellout}. It is contained in the syntactic structure of the lexical entry \ref{ex:german-ihr-lexicon}, and therefore, spelled out as \tit{ihr}.
+The syntactic structure for the dative is given in \ref{ex:german-ihr-spellout}. It is contained in the lexical tree in \ref{ex:german-ihr-lexicon}, and therefore, spelled out as \tit{ihr}.
 The lexical entry in \ref{ex:german-sie-lexicon} is not considered, because it does not contain \tsc{f3}.
 
 \ex. \begin{forest} boom
@@ -581,9 +582,9 @@ fit to=tree]{};
 \end{forest}
 \label{ex:german-ihr-spellout}
 
-The syntactic structure for the accusative is given in \ref{ex:german-sie-spellout-acc}. It is contained in the syntactic structure of the lexical entry \ref{ex:german-sie-lexicon} and in \ref{ex:german-ihr-lexicon}.
+The syntactic structure for the accusative is given in \ref{ex:german-sie-spellout-acc}. It is contained in the lexical tree in \ref{ex:german-sie-lexicon} and in the one in \ref{ex:german-ihr-lexicon}.
 The former, \ref{ex:german-sie-lexicon}, has one no unused features. The latter, \ref{ex:german-ihr-lexicon}, has one unused feature: \tsc{f}3.
-Therefore, \ref{ex:german-sie-lexicon} wins the competition, and the syntactic structurer is spelled out as \tit{sie}.
+Therefore, \ref{ex:german-sie-lexicon} wins the competition, and the syntactic structure is spelled out as \tit{sie}.
 
 \ex. \begin{forest} boom
 [\tsc{accP},
@@ -604,8 +605,8 @@ fit to=tree]{};
 \end{forest}
 \label{ex:german-sie-spellout-acc}
 
-The syntactic structure for the nominative is given in \ref{ex:german-sie-spellout-nom}. It is contained in the syntactic structure of the lexical entry \ref{ex:german-sie-lexicon} and in \ref{ex:german-ihr-lexicon}.
-The former, \ref{ex:german-sie-lexicon}, has one unused feature: \tsc{f}2. The latter, \ref{ex:german-ihr-lexicon}, has two unused features: \tsc{f}2 and \tsc{f}3. Therefore, \ref{ex:german-sie-lexicon} wins the competition, and the syntactic structurer is spelled out as \tit{sie}.
+The syntactic structure for the nominative is given in \ref{ex:german-sie-spellout-nom}. It is contained in the lexical tree in \ref{ex:german-sie-lexicon} and in the one in \ref{ex:german-ihr-lexicon}.
+The former, \ref{ex:german-sie-lexicon}, has one unused feature: \tsc{f}2. The latter, \ref{ex:german-ihr-lexicon}, has two unused features: \tsc{f}2 and \tsc{f}3. Therefore, \ref{ex:german-sie-lexicon} wins the competition, and the syntactic structure is spelled out as \tit{sie}.
 
 \ex. \begin{forest} boom
 [\tsc{nomP},
@@ -639,9 +640,9 @@ In for instance Khanty, the phonological form of the accusative literally contai
   \label{tbl:cont-khanty-3sg}
 \end{table}
 
-The intuition is the following. The morphological form of the pronouns mirror the cumulative feature decomposition given in Table \ref{tbl:case-decomposed}. That is, the accusative has the morphology that the nominative has (\tit{luw}) plus something extra (\tit{-e:l}). The dative has the morphology that the accusative has (\tit{luw-e:l}) plus something extra (\tit{luw-e:l}-na). In what follows I make it concrete how syntactic features translate to morphological form.
+The intuition is the following. The morphological form of the pronouns mirror the cumulative feature decomposition given in Table \ref{tbl:case-decomposed}. That is, the accusative has the morphology that the nominative has (\tit{luw}) plus something extra (\tit{-e:l}). The dative has the morphology that the accusative has (\tit{luw-e:l}) plus something extra (\tit{luw-e:l}-na).
 
-First, I give the lexical entry for the nominative third person singular. It contains pronominal syntactic structure and the feature \tsc{f}1. The phonological form associated with the structure is \tit{luw}. The lexical entry is given in \ref{ex:khanty-luw-lexicon}.
+First, I give the lexical entry for the nominative third person singular. It contains pronominal features and the feature \tsc{f}1. The phonological form associated with the structure is \tit{luw}. The lexical entry is given in \ref{ex:khanty-luw-lexicon}.
 
 \ex.
 \begin{forest} boom
@@ -654,7 +655,7 @@ First, I give the lexical entry for the nominative third person singular. It con
   {\draw (.east) node[right]{⇔ \tit{luw}}; }
 \end{forest}\label{ex:khanty-luw-lexicon}
 
-The syntactic structure in for the nominative is given in \ref{ex:khanty-luw-spellout}. It is contained in the syntactic structure of the lexical entry in \ref{ex:khanty-luw-spellout}, and the nominative is spelled out as \tit{luw}.
+The syntactic structure in for the nominative is given in \ref{ex:khanty-luw-spellout}. It is contained in the lexical tree in \ref{ex:khanty-luw-spellout}, and the nominative is spelled out as \tit{luw}.
 
 \ex. \begin{forest} boom
 [\tsc{nomP},
@@ -712,7 +713,7 @@ label={below left:\tit{-e:l}}]{};
 \end{forest}
 \label{ex:khanty-el-luw-spellout}
 
-The lexical entry in \ref{ex:khanty-el-lexicon} can only be a match for the syntactic structure if \tsc{nomP} moves away, leaving the \tsc{accP} containing \tsc{f2} behind. In other words, the complement of \tsc{f2} needs to be moved away.
+The lexical entry in \ref{ex:khanty-el-lexicon} can match the syntactic structure if \tsc{nomP} moves away, leaving the \tsc{accP} containing \tsc{f2} behind. In other words, the complement of \tsc{f2} needs to be moved away.
 
 Exactly this movement is one of the two so-called `evacuation movements' that is part of the spellout procedure in Nanosyntax. As I illustrated in Section \ref{sec:syncretism}, lexical entries are matched using the Superset Principle and the Elsewhere Condition. However, if there is no match in the lexicon for a particular syntactic structure, two types of movement can take place, in a fixed order.\footnote{
 The two movement types are Cinque's complement and spec to spec movement that we need anyway to get different surface orders in our syntax.
@@ -749,7 +750,7 @@ This is exactly the type of movement I described necessary for the Khanty pronou
 \end{forest}
 \label{ex:khanty-luw-el-movement}
 
-The result of the movement is given in \ref{ex:khanty-luw-el-spellout}. The syntactic structure of the lexical entry in \ref{ex:khanty-el-lexicon} matches the syntactic structure, and \tsc{acc}P is spelled out as \tit{e:l}.
+The result of the movement is given in \ref{ex:khanty-luw-el-spellout}. The lexical tree in \ref{ex:khanty-el-lexicon} matches the syntactic structure, and \tsc{acc}P is spelled out as \tit{e:l}.
 
 \ex. \begin{forest} boom
 [\ac{acc}P
@@ -836,7 +837,7 @@ The same movement has to take place, which is shown in \ref{ex:khanty-luw-el-na-
 \end{forest}
 \label{ex:khanty-luw-el-na-movement}
 
-The result of the movement is given in \ref{ex:khanty-luw-el-na-spellout}. The syntactic structure of the lexical entry in \ref{ex:khanty-na-lexicon} matches the syntactic structure, and \tsc{dat}P is spelled out as \tit{na}.
+The result of the movement is given in \ref{ex:khanty-luw-el-na-spellout}. The lexical tree in \ref{ex:khanty-na-lexicon} matches the syntactic structure, and \tsc{dat}P is spelled out as \tit{na}.
 
 \ex.
 \begin{forest} boom
@@ -901,7 +902,7 @@ I repeat the summary of the data pattern for Gothic in Table \ref{tbl:summary-go
 
 The intuition is the following. The headless relatives reflect the cumulative feature decomposition given in Table \ref{tbl:case-decomposed}. A case wins the competition if it contains all features the other case has. So, the dative contains all features that the accusative has, so the dative surfaces. Similarly, the dative contains all features the nominative has, and again the dative surfaces. The same holds for the last pair: the accusative contains all features the nominative has, so the accusative surfaces. I illustrate this per case pair.
 
-I start with the competition between dative and accusative, in which dative wins. The corresponding cells are marked dark gray in Table \ref{tbl:summary-gothic-deriving}. In \ref{ex:dat-contains-acc} I show the syntactic structure of a dative relative pronoun. It contains the syntactic features for a relative pronoun, \tsc{f1}, \tsc{f2} and \tsc{f3}. Contained in this structure is an accusative relative pronoun, marked in gray. This consists of the syntactic features for the relative pronoun, \tsc{f1} and \tsc{f2}.
+I start with the competition between dative and accusative, in which dative wins. The corresponding cells are marked dark gray in Table \ref{tbl:summary-gothic-deriving}. In \ref{ex:dat-contains-acc} I show the syntactic structure of a dative relative pronoun. It contains the features of the relative pronoun, \tsc{f1}, \tsc{f2} and \tsc{f3}. Contained in this structure is an accusative relative pronoun, marked in gray. This consists of the features of the relative pronoun, \tsc{f1} and \tsc{f2}.
 
 \ex.
 \begin{forest} boom
@@ -976,7 +977,7 @@ I am not discussing the mechanics within a larger syntactic context here, but on
 \end{table}\label{tbl:dat-against-acc}
 
 
-Next is the competition between dative and nominative, in which dative wins. The corresponding cells are marked light gray in Table \ref{tbl:summary-gothic-deriving}. In \ref{ex:dat-contains-nom} I show the syntactic structure of a dative relative pronoun. It contains the syntactic features for a relative pronoun, \tsc{f1}, \tsc{f2} and \tsc{f3}. Contained in this structure is an nominative relative pronoun, marked in gray. This consists of the syntactic features for the relative pronoun and \tsc{f1}.
+Next is the competition between dative and nominative, in which dative wins. The corresponding cells are marked light gray in Table \ref{tbl:summary-gothic-deriving}. In \ref{ex:dat-contains-nom} I show the syntactic structure of a dative relative pronoun. It contains the features of the relative pronoun, \tsc{f1}, \tsc{f2} and \tsc{f3}. Contained in this structure is a nominative relative pronoun, marked in gray. This consists of the features for the relative pronoun and \tsc{f1}.
 
 \ex.
 \begin{forest} boom
@@ -1044,7 +1045,7 @@ Table \ref{tbl:dat-against-nom} shows the situation in which the dative and the 
   \end{tabular}
 \end{table}\label{tbl:dat-against-nom}
 
-Finally there is the competition between accusative and nominative, in which accusative wins. The corresponding cells are uncolored in Table \ref{tbl:summary-gothic-deriving}. In \ref{ex:acc-contains-nom} I show the syntactic structure of an accusative relative pronoun. It contains the syntactic features for a relative pronoun, \tsc{f1} and \tsc{f2}. Contained in this structure is a nominative relative pronoun, marked in gray. This consists of the syntactic features for the relative pronouna and \tsc{f1}.
+Finally there is the competition between accusative and nominative, in which accusative wins. The corresponding cells are uncolored in Table \ref{tbl:summary-gothic-deriving}. In \ref{ex:acc-contains-nom} I show the syntactic structure of an accusative relative pronoun. It contains the features of the relative pronoun, \tsc{f1} and \tsc{f2}. Contained in this structure is a nominative relative pronoun, marked in gray. This consists of the features of the relative pronoun and \tsc{f1}.
 
 \ex.
 \begin{forest} boom
